--- a/Lesson-13/index.html
+++ b/Lesson-13/index.html
@@ -5,14 +5,14 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <table id='main-table'>
+        <table id="main-table">
             <tr>                
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
-                <td id = 'addRow' colspan="3">Добавить</td>
+                <td id = "addRow" colspan="3">Добавить</td>
               </tr>             
         </table>
     </body>    
